# sfml-reference

./: CMakeLists.txt  README.md  main.cpp
bullet/: Bullet.cpp  Bullet.h
docs/comp4300-notes/: lec05.md
docs/game/: bullet.md  game-logic.md  player-class.md
docs/general/: cpp-notes.md  sfml-notes.md
docs/scratch/: temp-notes.txt
drawing/: DrawableObject.h  Player.cpp  Player.h  Renderer.h
entities/: Entity.h  EntityManager.h
game/: Game.cpp  Game.h
player/: Player.cpp  Player.h
utils/windowHelpers/: WindowHelpers.cpp  WindowHelpers.h
